--- a/src/scss/ui/_tabs.scss
+++ b/src/scss/ui/_tabs.scss
@@ -100,6 +100,7 @@
         max-height: calc(100% - 44px);
         overflow-y: auto;
         background-color: #fff;
+        overflow-x: hidden;
         /*background-color: var(--bs-code-color);*/
         border-bottom: none;
     }
